--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 <body>
     <header>
         <h1>Discover hidden places in the world around you</h1>
-        <a>Download Excursion (Coming soon!)</a>
+        <a href="index.html">Download Excursion (Coming soon!)</a>
     </header>
+    <main>
+        <video src="resources/videos/excursion.mp4">Video couldnt be displayed</video>
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new points of interest around you</p>
+        <img src="resources/images/camp.jpg"/>
+        <img src="resources/images/phone.png"/>
+        <h2>Coming Soon for iPhone and Android</h2>
+        <a href="index.html">Download Excursion (Coming soon!)</a>
+    </main>
 </body>
